more font fiddling

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,19 @@
       "name": "witte_portfolio",
       "path": "",
       "files": {
+        "65785712": {
+          "id": "65785712",
+          "path": "img/map-icon.png",
+          "output": "img/map-icon.png",
+          "name": "map-icon.png",
+          "category": "IMAGE",
+          "size": 15424,
+          "type": "png",
+          "initialSize": 15424,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "0ffc35d4": {
           "id": "0ffc35d4",
           "path": "index.html",
@@ -164,15 +177,350 @@
           "parents": [],
           "type": "javascript"
         },
-        "0ee696cf": {
-          "id": "0ee696cf",
-          "path": "img/blah.jpg",
-          "output": "img/blah.jpg",
-          "name": "blah.jpg",
+        "43ac0135": {
+          "id": "43ac0135",
+          "path": "achievementgap.html",
+          "output": "achievementgap.html",
+          "name": "achievementgap.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "1f2ce411": {
+          "id": "1f2ce411",
+          "path": "campaign_finance.html",
+          "output": "campaign_finance.html",
+          "name": "campaign_finance.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "29c7c76a": {
+          "id": "29c7c76a",
+          "path": "contact.html",
+          "output": "contact.html",
+          "name": "contact.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e6a4a488": {
+          "id": "e6a4a488",
+          "path": "maptiles.html",
+          "output": "maptiles.html",
+          "name": "maptiles.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "2e8f9ea2": {
+          "id": "2e8f9ea2",
+          "path": "README.md",
+          "output": "README.html",
+          "name": "README.md",
+          "category": "HTML",
+          "autoCompile": true,
+          "sanitize": false,
+          "gfm": true,
+          "wrapWithHtml": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "markdown"
+        },
+        "ae20097a": {
+          "id": "ae20097a",
+          "path": "resume.html",
+          "output": "resume.html",
+          "name": "resume.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "b3f59516": {
+          "id": "b3f59516",
+          "path": "terrain_map.html",
+          "output": "terrain_map.html",
+          "name": "terrain_map.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "5cafa846": {
+          "id": "5cafa846",
+          "path": "unintended_pregnancies.html",
+          "output": "unintended_pregnancies.html",
+          "name": "unintended_pregnancies.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "2cb1abb1": {
+          "id": "2cb1abb1",
+          "path": "UW_incoming.html",
+          "output": "UW_incoming.html",
+          "name": "UW_incoming.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "b9089e91": {
+          "id": "b9089e91",
+          "path": "work.html",
+          "output": "work.html",
+          "name": "work.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e6007ea5": {
+          "id": "e6007ea5",
+          "path": "img/achievementgap.png",
+          "output": "img/achievementgap.png",
+          "name": "achievementgap.png",
           "category": "IMAGE",
-          "size": 5242,
+          "size": 1182004,
+          "type": "png",
+          "initialSize": 1182004,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0ea1d8dd": {
+          "id": "0ea1d8dd",
+          "path": "img/achievement_crop.png",
+          "output": "img/achievement_crop.png",
+          "name": "achievement_crop.png",
+          "category": "IMAGE",
+          "size": 2968617,
+          "type": "png",
+          "initialSize": 2968617,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5871ec05": {
+          "id": "5871ec05",
+          "path": "img/BWCA.jpg",
+          "output": "img/BWCA.jpg",
+          "name": "BWCA.jpg",
+          "category": "IMAGE",
+          "size": 11740442,
           "type": "jpg",
-          "initialSize": 5242,
+          "initialSize": 11740442,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a855245c": {
+          "id": "a855245c",
+          "path": "img/campaign_crop.png",
+          "output": "img/campaign_crop.png",
+          "name": "campaign_crop.png",
+          "category": "IMAGE",
+          "size": 2968617,
+          "type": "png",
+          "initialSize": 2968617,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bc634414": {
+          "id": "bc634414",
+          "path": "img/campaign_full.png",
+          "output": "img/campaign_full.png",
+          "name": "campaign_full.png",
+          "category": "IMAGE",
+          "size": 337723,
+          "type": "png",
+          "initialSize": 337723,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1b8e5f72": {
+          "id": "1b8e5f72",
+          "path": "img/contact_footer.png",
+          "output": "img/contact_footer.png",
+          "name": "contact_footer.png",
+          "category": "IMAGE",
+          "size": 217403,
+          "type": "png",
+          "initialSize": 217403,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "03029704": {
+          "id": "03029704",
+          "path": "img/footer_metro.png",
+          "output": "img/footer_metro.png",
+          "name": "footer_metro.png",
+          "category": "IMAGE",
+          "size": 215335,
+          "type": "png",
+          "initialSize": 215335,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "73eb1de3": {
+          "id": "73eb1de3",
+          "path": "img/GIS.png",
+          "output": "img/GIS.png",
+          "name": "GIS.png",
+          "category": "IMAGE",
+          "size": 2441,
+          "type": "png",
+          "initialSize": 2441,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cf5a50b9": {
+          "id": "cf5a50b9",
+          "path": "img/incoming_crop.png",
+          "output": "img/incoming_crop.png",
+          "name": "incoming_crop.png",
+          "category": "IMAGE",
+          "size": 3952831,
+          "type": "png",
+          "initialSize": 3952831,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0543a8f8": {
+          "id": "0543a8f8",
+          "path": "img/incoming_full.png",
+          "output": "img/incoming_full.png",
+          "name": "incoming_full.png",
+          "category": "IMAGE",
+          "size": 2739877,
+          "type": "png",
+          "initialSize": 2739877,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bd7f73c1": {
+          "id": "bd7f73c1",
+          "path": "img/maptiles.png",
+          "output": "img/maptiles.png",
+          "name": "maptiles.png",
+          "category": "IMAGE",
+          "size": 1955609,
+          "type": "png",
+          "initialSize": 1955609,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b95d5b58": {
+          "id": "b95d5b58",
+          "path": "img/mini_metro.png",
+          "output": "img/mini_metro.png",
+          "name": "mini_metro.png",
+          "category": "IMAGE",
+          "size": 137163,
+          "type": "png",
+          "initialSize": 137163,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d3b76067": {
+          "id": "d3b76067",
+          "path": "img/pregnancy_crop.png",
+          "output": "img/pregnancy_crop.png",
+          "name": "pregnancy_crop.png",
+          "category": "IMAGE",
+          "size": 3952831,
+          "type": "png",
+          "initialSize": 3952831,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "123cf60a": {
+          "id": "123cf60a",
+          "path": "img/pregnancy_full.png",
+          "output": "img/pregnancy_full.png",
+          "name": "pregnancy_full.png",
+          "category": "IMAGE",
+          "size": 3794018,
+          "type": "png",
+          "initialSize": 3794018,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cefe3ffe": {
+          "id": "cefe3ffe",
+          "path": "img/telescope.png",
+          "output": "img/telescope.png",
+          "name": "telescope.png",
+          "category": "IMAGE",
+          "size": 8035,
+          "type": "png",
+          "initialSize": 8035,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7fe56f50": {
+          "id": "7fe56f50",
+          "path": "img/terrain_crop.png",
+          "output": "img/terrain_crop.png",
+          "name": "terrain_crop.png",
+          "category": "IMAGE",
+          "size": 3952822,
+          "type": "png",
+          "initialSize": 3952822,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c3628391": {
+          "id": "c3628391",
+          "path": "img/terrain_full.png",
+          "output": "img/terrain_full.png",
+          "name": "terrain_full.png",
+          "category": "IMAGE",
+          "size": 6570228,
+          "type": "png",
+          "initialSize": 6570228,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "9b3c059c": {
+          "id": "9b3c059c",
+          "path": "img/witte_brand.png",
+          "output": "img/witte_brand.png",
+          "name": "witte_brand.png",
+          "category": "IMAGE",
+          "size": 3989,
+          "type": "png",
+          "initialSize": 3989,
           "optimized": false,
           "height": 0,
           "width": 0
